fix(users): allow deleted users to still be visible
