# banking-api/rest/transformer/user.go
@@ -1,6 +1,7 @@
 package transformer
 
 import (
+	"github.com/plutus/banking-api/pkg/slice"
 	"github.com/plutus/banking-api/rest/definitions"
 	"github.com/plutus/banking-api/services/entities"
 )
@@ -12,6 +13,8 @@ func FromUserEntityToDef(in entities.User) definitions.User {
 		Email:     in.Email,
 		CreatedAt: in.CreatedAt,
 		UpdatedAt: in.UpdatedAt,
+		DeletedAt: in.DeletedAt,
+		Accounts:  slice.FromManyToMany(in.Accounts, FromAccountEntityToDef),
 	}
 }
 
