# banking-api/services/entities/entities.go
@@ -10,6 +10,8 @@ type User struct {
 	Email     string
 	CreatedAt time.Time
 	UpdatedAt time.Time
+	DeletedAt *time.Time
+	Accounts  []Account
 }
 
 type Account struct {
